# dnd_summary

./: .env.example  .flake8  .gitignore  AGENTS.md  Dockerfile  README.md  TODO.md  alembic.ini  docker-compose.yml  pyproject.toml
alembic/: env.py
alembic/versions/: 0001_initial_schema.py  0002_add_indexes.py  0003_add_sessions_current_run.py  0004_add_run_steps.py  0005_add_entity_links.py  0006_add_campaign_threads.py  0007_add_corrections.py  0008_add_users_memberships.py  0009_add_notes_bookmarks.py  0010_add_spoiler_tags.py  0011_add_embeddings.py  0012_add_embedding_metadata.py  (+2 more)
docs/: ARCHITECTURE.md  CORRECTIONS.md  PRD.md  USER_TESTING.md  USER_TESTING_RESULTS.md
evals/: README.md  npc_eval_from_analysis.jsonl  npc_eval_template.jsonl
prompts/: ask_campaign_v1.txt  extract_events_v1.txt  extract_quotes_v1.txt  extract_session_facts_v1.txt  semantic_search_v1.txt  summary_plan_v1.txt  write_summary_dm_v1.txt  write_summary_hooks_v1.txt  write_summary_npc_changes_v1.txt  write_summary_player_v1.txt  write_summary_v1.txt
scripts/: backfill_campaign_threads.py  backfill_entity_links.py  build_eval_from_analysis.py  inspect_run.py  migrate_transcripts.py  run_dspy_eval.py
tests/: conftest.py  factories.py  test_activities_cache_cleanup.py  test_activities_evidence_repair.py  test_activities_extract_helpers.py  test_activities_persist.py  test_activities_persist_helpers.py  test_activities_resolve.py  test_activities_run_status.py  test_activities_summary_helpers.py  test_activities_transcripts.py  test_api_core.py  test_api_external_sources.py  test_api_helpers.py  test_api_notes_bookmarks.py  test_api_summary_variants.py  test_campaign_config.py  test_cli.py  test_embeddings.py  test_llm_cache.py  test_mappings.py  test_render.py  test_rerank.py  test_retrieval_goldens.py  test_run_steps.py  test_semantic_retrieval.py  test_transcript_format.py  test_transcripts.py
transcripts/: README.md
(+35 files in other folders)
